First contents added

--- a/index.html
+++ b/index.html
@@ -8,6 +8,32 @@
     <link href="css/styles.css" rel="stylesheet">
 </head>
 <body>
-    
+    <div class="header">
+        <div>Header Logo</div>
+        <ul>
+            <li><a href="" alt="">header link one</a></li>
+            <li><a href="" alt="">header link two</a></li>
+            <li><a href="" alt="">header link three</a></li>
+        </ul>
+    </div>
+    <div class="first">
+        <div class="hero">
+            <div class="main-text">This website is awesome</div>
+            <div class="second-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+            <button>Sign up</button>
+        </div>
+        <div class="image">
+            <div>this is a placeholder for an image</div>
+        </div>
+    </div>
+    <div class="second">
+
+    </div>
+    <div class="third">
+
+    </div>
+    <div class="footer">
+
+    </div>
 </body>
 </html>
