--- a/index.html
+++ b/index.html
@@ -9,25 +9,37 @@
 </head>
 <body>
     <div class="header">
-        <div>Header Logo</div>
+        <div class="header-child"><div>Header Logo</div>
         <ul>
             <li><a href="" alt="">header link one</a></li>
             <li><a href="" alt="">header link two</a></li>
             <li><a href="" alt="">header link three</a></li>
-        </ul>
+        </ul></div>
     </div>
     <div class="first">
-        <div class="hero">
+        <div class="first-child"><div class="hero">
             <div class="main-text">This website is awesome</div>
             <div class="second-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
             <button>Sign up</button>
         </div>
         <div class="image">
             <div>this is a placeholder for an image</div>
-        </div>
+        </div></div>
     </div>
-    <div class="second">
-
+    <div class="second">Some random information.</div>
+    <div class="second-two">
+        <div>
+            <div class="box-image"></div><div class="second-text">this is some subtext under an ilustration or image</div>
+        </div>
+        <div>
+            <div class="box-image"></div><div class="second-text">this is some subtext under an ilustration or image</div>
+        </div>
+        <div>
+            <div class="box-image"></div><div class="second-text">this is some subtext under an ilustration or image</div>
+        </div>
+        <div>
+            <div class="box-image"></div><div class="second-text">this is some subtext under an ilustration or image</div>
+        </div>
     </div>
     <div class="third">
 
