--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="header">
-        <div class="header-child"><div>Header Logo</div>
+        <div class="header-child"><div class="header-font">Header Logo</div>
         <ul>
             <li><a href="" alt="">header link one</a></li>
             <li><a href="" alt="">header link two</a></li>
@@ -20,7 +20,7 @@
         <div class="first-child"><div class="hero">
             <div class="main-text">This website is awesome</div>
             <div class="second-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
-            <button>Sign up</button>
+            <button href="https://www.example.com">Sign up</button>
         </div>
         <div class="image">
             <div>this is a placeholder for an image</div>
@@ -42,10 +42,14 @@
         </div>
     </div>
     <div class="third">
-
+        <div>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling space or maybe people will actually read it. Who knows? All I know is that it looks nice.<p>-Thor, god of Thunder</p></div>
+    </div>
+    <div class="fourth">
+        <div class="fourth-child"><div class="fourth-child-son"><div><div class="header-font">Call to action! It's time!</div><div class="second-text" style="margin-bottom: 0;">Sign up for our product by clicking that button right over there!</div></div><button class="button">Sign up</button></div>
+        </div>
     </div>
     <div class="footer">
-
+        <div>Copyright Ⓒ Landing page 2021</div>
     </div>
 </body>
 </html>
